RESOLVED FIXED24280
Fix fill rules in QtWebKit
https://bugs.webkit.org/show_bug.cgi?id=24280
Summary Fix fill rules in QtWebKit
Zack Rusin
Reported 2009-03-01 15:34:57 PST
As in the subject. Currently we're not propagating the fill rule when rendering the paths (both the stroke and fill).
Attachments
Propagate the fill rules (1.24 KB, patch)
2009-03-01 15:35 PST, Zack Rusin
hausmann: review+
Zack Rusin
Comment 1 2009-03-01 15:35:42 PST
Created attachment 28156 [details] Propagate the fill rules
Simon Hausmann
Comment 2 2009-03-02 08:39:00 PST
Comment on attachment 28156 [details] Propagate the fill rules Nice :) Missing changelog, but I trust you that you'll add it :)
Simon Hausmann
Comment 3 2009-03-27 10:45:52 PDT
Landed in r42039
Note You need to log in before you can comment on or make changes to this bug.