2009-03-27  Zack Rusin <zack@kde.org>

Reviewed by Simon Hausmann.

        https://bugs.webkit.org/show_bug.cgi?id=24280

        Fix propagation of fill rules when rendering paths in the Qt build.

Canonical link: https://commits.webkit.org/34095@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42039 268f45cc-cd09-0410-ab3c-d52691b4dbfc